correct typo in title

--- a/PhysRevLett.28.455.ipynb
+++ b/PhysRevLett.28.455.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Energy Straggling and Radiation Reaction for Magnetic Breinsstrahlung\n",
+    "# Energy Straggling and Radiation Reaction for Magnetic Bremsstrahlung\n",
     "\n",
     "CS Shen and D White, [Phys Rev Lett __28__ 455 (1971)](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.28.455)\n",
     "\n",
@@ -198,26 +198,6 @@
     "    Energydumps_a[t] = getEnergy(yn)/g0\n",
     "    Numberdumps_a[t] = getNumber(yn)\n",
     "    ffiga[t,:] = yn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1087.192868014786"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g0/1800"
    ]
   },
   {
